# dosetrack

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.railway  Rocket.toml  docker-compose.production.yml  docker-compose.yml  docker-compose.yml.backup
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: codeql-analysis.yml
backend/dosetrack-ws/: Cargo.toml  Rocket.toml
backend/dosetrack-ws/src/: main.rs
backend/dosetrack-ws/src/auth/: mod.rs
backend/dosetrack-ws/src/database/: mod.rs
backend/dosetrack-ws/src/model/: dosetrack.rs  mod.rs
backend/dosetrack-ws/src/routes/: bad_id_error.rs  companies.rs  doses.rs  dosimeters.rs  film_dose.rs  films.rs  mod.rs  operators.rs  periods.rs  registration.rs  users.rs
backend/dosetrack-ws/src/utils/: mod.rs
backend/dosetrack-ws/test/: companies.http  doses.http  dosimeters.http  film_doses.http  films.http  operators.http  periods.http  registration.http  users.http
backend/old/: .env  Cargo.toml  Rocket.toml
backend/old/database/: mod.rs
backend/old/models/: mod.rs
backend/old/src/: lib.rs  main.rs
backend/old/src/routes/: ping.rs  users.rs
backend/old/tests/: api.http  basic_tests.rs
backend/old/tests/common/: mod.rs
docs/: release.md  sieverts.md
frontend/dosetrack/: package-lock.json  package.json  rollup.config.js
frontend/dosetrack/docs/user_manual/: pdf.md  user_manual.md
frontend/dosetrack/public/: global.css  index.html  manifest.json
frontend/dosetrack/src/: App.svelte  settings.js  store.js  validations.js
frontend/dosetrack/src/components/: CodeSnippet.svelte  Confirm.svelte  DosimeterModal.svelte  FilmModal.svelte  FilmSelector.svelte  FilmsPeriods.svelte  FormError.svelte  Header.svelte  Loader.svelte  NavBar.svelte  NewCompany.svelte  OperatorSelector.svelte  PeriodDoses.svelte  PeriodInput.svelte  PeriodModal.svelte  PeriodSelector.svelte  PeriodViewer.svelte  Photo.svelte  Section.svelte  TableDoses.svelte  TableDosimeters.svelte  (+9 more)
frontend/dosetrack_app/: package-lock.json  package.json
frontend/dosetrack_app/public/: dashboard.css  index.html
frontend/dosetrack_app/src/: App.svelte
frontend/proto_app/: package-lock.json  package.json
frontend/proto_app/public/: global.css
frontend/proto_app/src/: App.svelte
frontend/test_app/: package-lock.json  package.json  pepe.txt
frontend/test_app/public/: dashboard.css  dashboard.js  index.html
frontend/test_app/src/: App.svelte  dosimeters.js  operators.js  validations.js
(+58 files in other folders)
