[package]
name = "dosetrack-api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
rocket_oauth2 = "0.5.0-rc.1"
rocket_http = "0.5.0-rc.1"
hyper = "0.14.18"
hyper-tls = "0.5.0"
tokio = "1.17.0"
tera = "1.15.0"
hyper-sync-rustls = "0.3.0-rc.17"
mongodb= {version = "2.2.0", features = ["bson-chrono-0_4"]}

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]