[package]
name = "dosetrack-api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
rocket_oauth2 = "0.5.0-rc.1"
rocket_http = "0.5.0-rc.2"
hyper = "0.14.25"
hyper-tls = "0.5.0"
tokio = "1.26.0"
tera = "1.18.1"
hyper-sync-rustls = "0.3.0-rc.17"
mongodb= {version = "2.4.0", features = ["bson-chrono-0_4"]}
chrono = "0.4.24"
rust_decimal = "1.29.1"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]

[dependencies.rocket]
version = "0.5.0-rc.3"
features = ["json"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true    # Enable link-time optimizations.
